# Trace-Desktop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config-demo.ini  main.cpp  resources.qrc
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
auth/: auth.cpp  auth.h
auth/log-in/: log_in.cpp  log_in.h  log_in_window.ui
auth/registration/: registration.cpp  registration.h
include/auth/: auth.h
include/auth/registration/: registration.h
include/chats/: chats_window.h
include/utils/: config_utils.h
log-in/: log_in.cpp  log_in.h  log_in_window.ui
registration/: registration.cpp  registration.h  registration_window.ui  registrationwindow.ui  ui_registrationwindow.h
resources/styles/: custom_error.qss
src/auth/: auth.cpp
src/auth/log-in/: log_in.cpp
src/auth/registration/: registration.cpp
src/chats/: chats_window.cpp
ui_forms/: chats_window.ui  log_in_window.ui  registration_window.ui
utils/: config_utils.cpp
